# rain.forker

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: package-release.yaml
crates/forker/: Cargo.toml
crates/forker/src/: error.rs  fork.rs  lib.rs  result.rs
crates/forker/tests/: forker.rs
