[package]
name = "rain-forker"
description = "Generic forked-EVM executor: multi-fork RPC forking, typed alloy calls, call tracing, and historical tx replay on revm + foundry-fork-db."
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
revm.workspace = true
revm-inspectors.workspace = true
foundry-fork-db.workspace = true
alloy.workspace = true
rain-error-decoding.workspace = true
thiserror.workspace = true
eyre.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
alloy = { version = "1", features = ["node-bindings", "provider-anvil-node"] }
